objects/VTAC__c.object
<CustomObject><fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Community_Content_Status__c</fullName>
        <label>Community Content Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Venture Terms &amp; Conditions (VTAC)</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>VTAC</label><nameField>
        <displayFormat>VTAC -{00000000}</displayFormat>
        <label>VTAC Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>VTAC</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>